fixed layout issue

--- a/style.css
+++ b/style.css
@@ -1,15 +1,9 @@
-html {
-    height: 100%;
-    width: 100%;
-}
-body {
-    height: 100%;
-    width: 100%;
-}
+
+
 /* HOMEPAGE DIV */
 #homepage {
     height: 100vh;
-    width: 100%;
+    min-width: 100vw;
     color: white;
     margin: 0 auto;
     background:
@@ -19,7 +13,7 @@ body {
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-  
+    
 }
 
 .navbar {
@@ -112,7 +106,7 @@ p {
 .container {
     display: flex;
     justify-content: center;
-    padding: 5%; 
+    padding: 0; 
     width: 80%;  
     }
     
@@ -124,7 +118,7 @@ p {
     
 .about-img {
         border: 5px solid #151515;
-        margin: 15px;
+        margin: 0;
         width: 350px;
         height: 500px;
         transition: filter .5s ease-in-out;
@@ -146,7 +140,7 @@ p {
         font-size: 1.2rem;
     }
 .title {
-        padding: 15px;
+        padding: 15px 0px 15px 0px;
         font-family: 'Permanent Marker', cursive;
     }
 
@@ -186,7 +180,7 @@ hr{
 }
 .portfolio-title {
     color: #151515;
-    padding: 15px;
+    padding: 15px 0px 15px 0px;
     font-family: 'Permanent Marker', cursive;
 }
 
